Rimossi file non necessari

--- a/src/SeminarioDocker.tex
+++ b/src/SeminarioDocker.tex
@@ -268,9 +268,9 @@ docker run -ti ubuntu
 
 \begin{frame}[fragile]
 \frametitle{NodeJS}
-\begin{block}{Un semplice container che manda in esecuzione un file}
+\begin{block}{Un semplice container che manda in esecuzione un'app}
 \begin{verbatim}
-TODO
+docker run -p 3000:3000 tirocigno/nodejssampleapp
 \end{verbatim}
 \end{block}
 \end{frame}
