Added support for normies

--- a/src/SeminarioDocker.tex
+++ b/src/SeminarioDocker.tex
@@ -275,7 +275,8 @@ CMD ["/lpaas-ws/script.sh"]
 %------------------------------------------------
 \section{Live demo}
 \begin{frame}
-\Huge{\centerline{Live demo}}
+\frametitle{Live Demo}
+\includegraphics[width=\textwidth]{normies}
 \end{frame}
 
 %-------------------------------------------------
